# Log

./: .gitignore  CMakeLists.txt  README.md  log.hpp
demo/: CMakeLists.txt  log_demo.cpp
src/: CMakeLists.txt  log.hpp
test/: CMakeLists.txt  log_test.cpp  test.cpp
